--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Portfolio</title>
-   <link rel="stylesheet" href="css/styles.css">
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <main>
+    <article>
+      <section class="headline">
+        <h1>Hey there! I’m Henschel.</h1>
+        <h4>I’am a Software Developer.</h4>
+        <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded,
+          don’t hesitate to contact me.</p>
+      </section>
+      <section class="social-media"></section>
+    </article>
+  </main>
 </body>
 </html>
