--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
   <main>
-    <article>
-      <section class="headline">
-        <h1>Hey there! I’m Henschel.</h1>
-        <h4>I’am a Software Developer.</h4>
-        <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded,
-          don’t hesitate to contact me.</p>
+    <article class="headline">
+      <h1>Hey there! <br /> I’m Henschel.</h1>
+      <h4>I’am a Software Developer.</h4>
+      <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded,
+        don’t hesitate to contact me.</p>
+      <section class="social-media">
+        <img src="images/Vector 1.png" alt="GitHub" width="55" height="55" />&nbsp;
+        <img src="images/Vector 2.png" alt="LinkedIn-1" width="25" height="55" />
+        <img src="images/Vector 3.png" alt="LinkedIn-2" width="25" height="55" />&nbsp;
+        <img src="images/Vector 4.png" alt="Social" width="55" height="55" />
+        <img src="images/Vector 5.png" alt="Twitter" width="55" height="55" />
+        <img src="images/Vector 6.png" alt="Medium" width="55" height="55" />
       </section>
-      <section class="social-media"></section>
     </article>
+
   </main>
 </body>
 </html>
