--- a/index.html
+++ b/index.html
@@ -4,28 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <main>
-    <article class="headline">
-      <nav class="nav">
-        <p>Henschel</p>
-        <img src="images/more.png" alt="Medium" width="55" height="55" />
-      </nav>
+  <header class="nav">
+    <a href="">Henschel</a>
+    <nav><a href=""><img src="images/more.png" alt="More" width="55" height="55" /></a></nav>
+  </header>
+  <section class="headline">
       <h1>Hey there! <br /> I’m Henschel.</h1>
-      <h4>I’am a Software Developer.</h4>
-      <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded,
-        don’t hesitate to contact me.</p>
-      <section class="social-media">
-        <img src="images/github.png" alt="GitHub" width="55" height="55" />
-        <img src="images/linkedin.png" alt="LinkedIn" width="25" height="55" />
-        <img src="images/gmail.png" alt="Gmail" width="55" height="55" />
-        <img src="images/twitter.png" alt="Twitter" width="55" height="55" />
-        <img src="images/medium.png" alt="Medium" width="55" height="55" />
-      </section>
-    </article>
-  </main>
+      <h2>I’am a Software Developer.</h2>
+      <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+      <ul class="social-media">
+        <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
+        <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
+        <li><a href="https://www.angellist.com/"><img src="images/angel list.svg" alt="Angellist" width="55" height="55" /></a></li>
+        <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
+        <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
+      </ul>
+    </section>
 </body>
 </html>
