Create basic grid works section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<>
   <header class="nav">
     <a href="">Henschel</a>
     <nav><a href=""><img src="images/more.png" alt="More" width="55" height="55" /></a></nav>
@@ -22,6 +22,18 @@
         <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
         <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
       </ul>
+    </section>
+    <section>
+      <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>
+        <div class="grid-item">7</div>
+        <div class="grid-item">8</div>
+      </div>
     </section>
 </body>
 </html>
