Added footer section

--- a/index.html
+++ b/index.html
@@ -24,16 +24,50 @@
       </ul>
     </section>
     <section>
-      <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
+      <div class="works">
+        <div class="works-item">My Recent Works<hr /></div>
+        <div class="works-item">Multi-Post Stories<p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p></div>
+        <div class="works-item">Professional Art Printing Data<p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p></div>
+        <div class="works-item">4</div>
+        <div class="works-item">5</div>
+        <div class="works-item">6</div>
+        <div class="works-item">7</div>
+        <div class="works-item">8</div>
       </div>
     </section>
+    <footer class="footer">
+      <h1>About me</h1>
+      <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+      <button>Get My Resume</button>
+      <hr />
+      <ul>
+        <li>Languages
+          <ol>
+            <li>Javascript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Ruby</li>
+          </ol>
+        </li>
+        <li>Frameworks
+          <ol>
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>RSPec</li>
+            <li>CapyBara</li>
+            <li>Selenium</li>
+          </ol>
+        </li>
+        <li>Skills
+          <ol>
+            <li>Codekit</li>
+            <li>Github</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal`</li>
+          </ol>
+        </li>
+      </ul>
+    </footer>
 </body>
 </html>
