--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
       </ul>
     </section>
-    <section>
-      <div class="works">
+    <section class="works">
         <div class="works-item">My Recent Works<hr /></div>
         <div class="works-item">Multi-Post Stories<p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p></div>
         <div class="works-item">Professional Art Printing Data<p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p></div>
@@ -33,41 +32,51 @@
         <div class="works-item">6</div>
         <div class="works-item">7</div>
         <div class="works-item">8</div>
-      </div>
     </section>
     <footer class="footer">
       <h1>About me</h1>
       <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-      <button>Get My Resume</button>
+      <button class="button"><a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing">Get My Resume</a></button>
+    </footer>
+    <section class="footer">
       <hr />
       <ul>
-        <li>Languages
-          <ol>
+        <li class="no-style">
+          <ul class="list-style" id="diamond">
+            <li>Languages</li>
+          </ul>
+          <ul class="no-style">
             <li>Javascript</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Ruby</li>
-          </ol>
+          </ul>
         </li>
-        <li>Frameworks
-          <ol>
+        <li class="no-style">
+          <ul class="list-style" id="square">
+            <li>Frameworks</li>
+          </ul>
+          <ul class="no-style">
             <li>Bootstrap</li>
             <li>Ruby on Rails</li>
             <li>RSPec</li>
             <li>CapyBara</li>
             <li>Selenium</li>
-          </ol>
+          </ul>
         </li>
-        <li>Skills
-          <ol>
+        <li class="no-style">
+          <ul class="list-style" id="disc">
+            <li>Skills</li>
+          </ul>
+          <ul class="no-style">
             <li>Codekit</li>
             <li>Github</li>
             <li>Codepen</li>
             <li>Gitlab</li>
-            <li>Terminal`</li>
-          </ol>
+            <li id="last-list">Terminal`</li>
+          </ul>
         </li>
       </ul>
-    </footer>
+    </section>
 </body>
 </html>
