Fix background image on works section, increase see button width, finish works section

--- a/index.html
+++ b/index.html
@@ -77,13 +77,97 @@
             dummy text. A daily selection of privately personalized reads; no
             accounts or sign-ups required.
           </p>
-          <div id="lang-box">
+          <div class="lang-box">
             <span>css</span>
             <span>html</span>
             <span>bootstrap</span>
             <span>ruby</span>
           </div>
           <a href=""></a><button>See Project</button></a>
+        </div>
+        <div class="demo-wrap">
+          <div class="main-projects  demo-content">
+            <h3>Professional Art<br />Printing Data</h3>
+            <p>
+              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+            </p>
+            <div class="lang-box" id="lang-box">
+              <span>html</span>
+              <span>bootstrap</span>
+              <span>ruby</span>
+            </div>
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
+        </div>
+        <div class="demo-wrap">
+          <div class="main-projects  demo-content">
+            <h3>Professional Art<br />Printing Data</h3>
+            <p>
+              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+            </p>
+            <div class="lang-box" id="lang-box">
+              <span>html</span>
+              <span>bootstrap</span>
+              <span>ruby</span>
+            </div>
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
+        </div>
+        <div class="demo-wrap">
+          <div class="main-projects  demo-content">
+            <h3>Professional Art<br />Printing Data</h3>
+            <p>
+              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+            </p>
+            <div class="lang-box" id="lang-box">
+              <span>html</span>
+              <span>bootstrap</span>
+              <span>ruby</span>
+            </div>
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
+        </div>
+        <div class="demo-wrap">
+          <div class="main-projects  demo-content">
+            <h3>Professional Art<br />Printing Data</h3>
+            <p>
+              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+            </p>
+            <div class="lang-box" id="lang-box">
+              <span>html</span>
+              <span>bootstrap</span>
+              <span>ruby</span>
+            </div>
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
+        </div>
+        <div class="demo-wrap">
+          <div class="main-projects  demo-content">
+            <h3>Professional Art<br />Printing Data</h3>
+            <p>
+              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+            </p>
+            <div class="lang-box" id="lang-box">
+              <span>html</span>
+              <span>bootstrap</span>
+              <span>ruby</span>
+            </div>
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
+        </div>
+        <div class="demo-wrap" id="last-item">
+          <div class="main-projects demo-content">
+            <h3>Professional Art<br />Printing Data</h3>
+            <p>
+              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
+            </p>
+            <div class="lang-box" id="lang-box">
+              <span>html</span>
+              <span>bootstrap</span>
+              <span>ruby</span>
+            </div>
+            <a href=""></a><button class="flex-button">See Project</button></a>
+          </div>
         </div>
       </div>
     </div>
