--- a/index.html
+++ b/index.html
@@ -25,40 +25,7 @@
         <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
       </ul>
     </section>
-<!--
-    <section class="works">
 
-      <div class="works-1">
-        <div class="works-flex">
-
-        </div>
-
-        <div class="works-item">My Recent Works<hr /></div>
-
-        <div class="works-item">Multi-Post Stories<p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p></div>
-      </div>
-
-      <div class="works-2">
-        <div class="works-flex">
-          <h1>Professional Art Printing Data</h1>
-          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-          <p class="wrap-boxes">html</p>
-          <p class="wrap-boxes">bootstrap</p>
-          <p class="wrap-boxes">ruby</p>
-        </div>
-
-        <div class="works-flex">See project</div>
-      </div>
-
-      <div class="works-3">3</div>
-
-      <div class="works-4">4</div>
-
-      <div class="works-5">5</div>
-
-      <div class="works-6">6</div>
-    </section>
-  -->
   <section id="projects">
     <div>
       <h1>My Recent Works</h1>
@@ -220,17 +187,26 @@
       </ul>
     </section>
 
-    <section id="form-section">
-      <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+    <section id="form">
+      <h1>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h1>
 
-      <form action="https://formspree.io/f/moqrdeno" method="POST" id="contact-form">
+      <form action="https://getform.io/f/fdbf5ed3-5d88-4e82-9be0-131be139c63e" method="POST" id="contact-form">
         <fieldset>
-          <input class="inputs" type="text" name="full-name" id="fullname" maxlength="30" placeholder="Enter your name" required />
-          <input class="inputs" type="email" name="email" id="email" placeholder="Email" required />
+          <input class="input" type="text" name="full-name" id="full-name" maxlength="30" placeholder="Enter full name" required />
+          <input class="input" type="email" name="email" id="email" placeholder="Enter email" required />
           <textarea name="comments" id="comments" maxlength="500" placeholder="Enter text here"></textarea>
         </fieldset>
-        <input type="submit" id="submit" name="submit" value="Get in touch" />
-        <small class="small hidden show">Please, enter valid Email: lower case only.</small>
+        <button id="form-button" type="submit" id="submit" name="submit" value="Get in touch">Get in touch</button>
       </form>
+    </section>
+    <section id="bottom-page">
+      <ul class="social-media">
+        <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
+        <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
+        <li><a href="https://www.angellist.com/"><img src="images/angel list.svg" alt="Angellist" width="55" height="55" /></a></li>
+        <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
+        <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
+      </ul>
+    </section>
 </body>
 </html>
