Replace span with ul li in works section

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
             accounts or sign-ups required.
           </p>
           <div class="lang-box">
-            <span>css</span>
-            <span>html</span>
-            <span>bootstrap</span>
-            <span>ruby</span>
+            <ul class="social-media" id="works-lang">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>ruby</li>
+            </ul>
           </div>
           <a href=""></a><button>See Project</button></a>
         </div>
