Change about me bg color and change social media button in works section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             accounts or sign-ups required.
           </p>
           <div class="lang-box">
-            <ul class="social-media" id="works-lang">
+            <ul class="social-media works-lang">
               <li>css</li>
               <li>html</li>
               <li>bootstrap</li>
@@ -61,9 +61,11 @@
               A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
             </p>
             <div class="lang-box" id="lang-box">
-              <span>html</span>
-              <span>bootstrap</span>
-              <span>ruby</span>
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
             </div>
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
@@ -75,9 +77,11 @@
               A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
             </p>
             <div class="lang-box" id="lang-box">
-              <span>html</span>
-              <span>bootstrap</span>
-              <span>ruby</span>
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
             </div>
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
@@ -89,9 +93,11 @@
               A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
             </p>
             <div class="lang-box" id="lang-box">
-              <span>html</span>
-              <span>bootstrap</span>
-              <span>ruby</span>
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
             </div>
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
@@ -103,9 +109,11 @@
               A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
             </p>
             <div class="lang-box" id="lang-box">
-              <span>html</span>
-              <span>bootstrap</span>
-              <span>ruby</span>
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
             </div>
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
@@ -117,9 +125,11 @@
               A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
             </p>
             <div class="lang-box" id="lang-box">
-              <span>html</span>
-              <span>bootstrap</span>
-              <span>ruby</span>
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
             </div>
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
@@ -131,9 +141,11 @@
               A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
             </p>
             <div class="lang-box" id="lang-box">
-              <span>html</span>
-              <span>bootstrap</span>
-              <span>ruby</span>
+              <ul class="social-media works-lang works-list">
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>ruby</li>
+              </ul>
             </div>
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
@@ -142,11 +154,11 @@
     </div>
   </section>
 
-    <footer class="footer">
-      <h1>About me</h1>
-      <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-      <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
-    </footer>
+  <footer class="footer">
+    <h1>About me</h1>
+    <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+    <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
+  </footer>
 
     <section class="footer">
       <hr />
