--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
+
+  <!-- NAVBAR -->
   <header class="nav">
     <a href="">Henschel</a>
     <nav><a href=""><img src="images/more.png" alt="More" width="55" height="55" /></a></nav>
   </header>
 
+  <!-- HEADLINE -->
   <section class="headline">
       <h1>Hey there! <br /> I’m Henschel.</h1>
       <h2>I’am a Software Developer.</h2>
@@ -26,9 +29,10 @@
       </ul>
     </section>
 
+    <!-- PROJECTS -->
   <section id="projects">
     <div>
-      <h1>My Recent Works</h1>
+      <h2 class="projects-title">My Recent Works</h2>
     </div>
     <div>
       <div id="flex-projects">
@@ -154,13 +158,11 @@
     </div>
   </section>
 
-  <footer class="footer">
-    <h1>About me</h1>
+  <!-- FOOTER -->
+    <section id='about' class="about-me">
+          <h1>About me</h1>
     <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
     <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
-  </footer>
-
-    <section class="footer">
       <hr />
       <ul>
         <li class="no-style">
@@ -201,26 +203,7 @@
       </ul>
     </section>
 
-    <section id="form">
-      <h1>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h1>
-
-      <form action="https://getform.io/f/fdbf5ed3-5d88-4e82-9be0-131be139c63e" method="POST" id="contact-form">
-        <fieldset>
-          <input class="input" type="text" name="full-name" id="full-name" maxlength="30" placeholder="Enter full name" required />
-          <input class="input" type="email" name="email" id="email" placeholder="Enter email" required />
-          <textarea name="comments" id="comments" maxlength="500" placeholder="Enter text here"></textarea>
-        </fieldset>
-        <button id="form-button" type="submit" id="submit" name="submit" value="Get in touch">Get in touch</button>
-      </form>
-    </section>
-    <section id="bottom-page">
-      <ul class="social-media">
-        <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
-        <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
-        <li><a href="https://www.angellist.com/"><img src="images/angel list.svg" alt="Angellist" width="55" height="55" /></a></li>
-        <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
-        <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
-      </ul>
-    </section>
+    <!-- FOOTER  -->
+    
 </body>
 </html>
