contact form name input

--- a/index.html
+++ b/index.html
@@ -204,6 +204,24 @@
     </section>
 
     <!-- FOOTER  -->
-    
+    <footer 
+    id="contact"
+    action=""
+    mehtod="POST"
+    >
+      <h2>
+        I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+      </h2>
+      <form>
+        <input 
+        type="text"
+        autocomplete="off"
+        name="name"
+        id="name"
+        placeholder="Full name"
+        required
+        >
+      </form>
+    </footer>
 </body>
 </html>
