Fix contact form

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <!-- HEADLINE -->
   <section class="headline">
       <h1>Hey there! <br /> I’m Henschel.</h1>
+
       <h2>I’am a Software Developer.</h2>
+
       <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+
       <ul class="social-media">
         <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
         <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
@@ -34,20 +37,22 @@
     <div>
       <h2 class="projects-title">My Recent Works</h2>
     </div>
+
     <div>
       <div id="flex-projects">
         <div>
           <img src="./images/gymfit.png" alt="gymfit" />
         </div>
+
         <div>
           <h2>Multi-Post Stories</h2>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
+
+          <p>A daily selection of privately personalized reads; no accounts or
             sign-ups required. has been the industry's standard dummy text
             ever since the 1500s, when an unknown printer took a standard
             dummy text. A daily selection of privately personalized reads; no
-            accounts or sign-ups required.
-          </p>
+            accounts or sign-ups required.</p>
+
           <div class="lang-box">
             <ul class="social-media works-lang">
               <li>css</li>
@@ -56,14 +61,16 @@
               <li>ruby</li>
             </ul>
           </div>
-          <a href=""></a><button>See Project</button></a>
+
+          <a href="#link-project"><button>See Project</button></a>
         </div>
+
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
-            <h3>Professional Art<br />Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
-            </p>
+            <h3 id="link-project">Professional Art<br />Printing Data</h3>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
             <div class="lang-box" id="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
@@ -71,15 +78,17 @@
                 <li>ruby</li>
               </ul>
             </div>
+
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
+
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
             <h3>Professional Art<br />Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
-            </p>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
             <div class="lang-box" id="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
@@ -87,15 +96,17 @@
                 <li>ruby</li>
               </ul>
             </div>
+
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
+
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
             <h3>Professional Art<br />Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
-            </p>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
             <div class="lang-box" id="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
@@ -103,15 +114,17 @@
                 <li>ruby</li>
               </ul>
             </div>
+
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
+
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
             <h3>Professional Art<br />Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
-            </p>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
             <div class="lang-box" id="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
@@ -119,15 +132,17 @@
                 <li>ruby</li>
               </ul>
             </div>
+
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
+
         <div class="demo-wrap">
           <div class="main-projects  demo-content">
             <h3>Professional Art<br />Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
-            </p>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
             <div class="lang-box" id="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
@@ -135,15 +150,17 @@
                 <li>ruby</li>
               </ul>
             </div>
+
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
+
         <div class="demo-wrap" id="last-item">
           <div class="main-projects demo-content">
             <h3>Professional Art<br />Printing Data</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.
-            </p>
+
+            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+
             <div class="lang-box" id="lang-box">
               <ul class="social-media works-lang works-list">
                 <li>html</li>
@@ -151,6 +168,7 @@
                 <li>ruby</li>
               </ul>
             </div>
+
             <a href=""></a><button class="flex-button">See Project</button></a>
           </div>
         </div>
@@ -160,15 +178,18 @@
 
   <!-- FOOTER -->
     <section id='about' class="about-me">
-          <h1>About me</h1>
-    <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-    <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
+      <h1>About me</h1>
+
+      <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+
+      <a href="https://drive.google.com/file/d/1D3v3WMohFK-9VfpdwMAeVZudj8reqxcA/view?usp=sharing"></a><button class="button">Get My Resume</button></a>
       <hr />
       <ul>
         <li class="no-style">
           <ul class="list-style" id="diamond">
             <li>Languages</li>
           </ul>
+
           <ul class="no-style">
             <li>Javascript</li>
             <li>HTML</li>
@@ -176,10 +197,12 @@
             <li>Ruby</li>
           </ul>
         </li>
+
         <li class="no-style">
           <ul class="list-style" id="square">
             <li>Frameworks</li>
           </ul>
+
           <ul class="no-style">
             <li>Bootstrap</li>
             <li>Ruby on Rails</li>
@@ -188,10 +211,12 @@
             <li>Selenium</li>
           </ul>
         </li>
+
         <li class="no-style">
           <ul class="list-style" id="disc">
             <li>Skills</li>
           </ul>
+
           <ul class="no-style">
             <li>Codekit</li>
             <li>Github</li>
@@ -204,36 +229,29 @@
     </section>
 
     <!-- FOOTER  -->
-    <footer>
-      <h2>
-        I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
-      </h2>
-      <form
-      id="contact"
-      action="https://formspree.io/f/mrgdolqb"
-      method="POST">
-        <input
-        type="text"
-        autocomplete="off"
-        name="name"
-        id="name"
-        placeholder="Full name"
-        required
-        />
-        <input
-        type="email"
-        autocomplete="off"
-        name="email"
-        id="email"
-        placeholder="johndoe@google.com"
-        required
-        />
-        <textarea
-        name="message"
-        id="message"
-        maxlength="500"
-        placeholder="Write a message">
-        </textarea>
+    <footer id="form">
+      <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+
+      <form id="contact-form" action="https://formspree.io/f/mrgdolqb" method="POST">
+        <input type="text" autocomplete="off" name="name" id="name" placeholder="Full name" maxlength="30" required />
+
+        <input type="email" autocomplete="off" name="email" id="email" placeholder="johndoe@google.com" required />
+
+        <textarea name="message" id="message" maxlength="500" placeholder="Write a message"></textarea>
+
+        <button id="form-button" class="button" type="submit">Get in touch</button>
+
+        <ul class="social-media">
+          <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
+
+          <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
+
+          <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/angel list.svg" alt="Angellist" width="55" height="55" /></a></li>
+
+          <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
+
+          <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
+        </ul>
       </form>
     </footer>
 </body>
