Add social media icons at footer

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <ul class="social-media">
         <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
-        <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
-        <li><a href="https://www.angellist.com/"><img src="images/angel list.svg" alt="Angellist" width="55" height="55" /></a></li>
+        <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.svg" alt="LinkedIn" width="25" height="55" /></a></li>
+        <li><a href="https://www.angellist.com/"><img src="images/angellist.svg" alt="Angellist" width="55" height="55" /></a></li>
         <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
         <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
       </ul>
@@ -241,16 +241,16 @@
 
         <button id="form-button" class="button" type="submit">Get in touch</button>
 
-        <ul class="social-media">
-          <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
+        <ul class="social-media" id="contact-social-form">
+          <li class="form-social-media"><a href="https://github.com/miltonHenschel"><img src="images/github.png" alt="GitHub" width="55" height="55" /></a></li>
 
-          <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/Linkedin icon.svg" alt="LinkedIn" width="25" height="55" /></a></li>
+          <li class="form-social-media"><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.png" alt="LinkedIn" width="25" height="55" /></a></li>
 
-          <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/angel list.svg" alt="Angellist" width="55" height="55" /></a></li>
+          <li class="form-social-media"><a href="https://www.angellist.com/"><img src="images/angellist.png" alt="Angellist" width="55" height="55" /></a></li>
 
-          <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
+          <li class="form-social-media"><a href="https://twitter.com/nketchogue"><img src="images/twitter.png" alt="Twitter" width="55" height="55" /></a></li>
 
-          <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
+          <li class="form-social-media"><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.png" alt="Medium" width="55" height="55" /></a></li>
         </ul>
       </form>
     </footer>
