Add require attribute to textarea in contact form

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
         <input type="email" autocomplete="off" name="email" id="email" placeholder="johndoe@google.com" required />
 
-        <textarea name="message" id="message" maxlength="500" placeholder="Write a message"></textarea>
+        <textarea name="message" id="message" maxlength="500" placeholder="Write a message" required></textarea>
 
         <button id="form-button" class="button" type="submit">Get in touch</button>
 
