--- a/index.html
+++ b/index.html
@@ -12,24 +12,44 @@
   <!-- NAVBAR -->
   <header class="nav">
     <a href="">Henschel</a>
-    <nav><a href=""><img src="images/more.png" alt="More" width="55" height="55" /></a></nav>
+    <nav>
+      <ul id="menu">
+        <li>
+          <a class="hidden-nav" href="">Portfolio</a>
+        </li>
+        <li>
+          <a class="hidden-nav" href="">About</a>
+        </li>
+        <li>
+          <a class="hidden-nav" href="">Contact</a>
+        </li>
+        <li>
+          <a href=""><img class="hidden-nav" src="images/mail.png" width="55" height="55" alt="mail"></a>
+        </li>
+        <li>
+          <a href=""><img id="hidden-img" src="images/more.png" alt="More" width="55" height="55"></a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <!-- HEADLINE -->
   <section class="headline">
+    <div>
       <h1>Hey there! <br /> I’m Henschel.</h1>
-
       <h2>I’am a Software Developer.</h2>
-
       <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+    </div>
 
-      <ul class="social-media">
-        <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
-        <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.svg" alt="LinkedIn" width="25" height="55" /></a></li>
-        <li><a href="https://www.angellist.com/"><img src="images/angellist.svg" alt="Angellist" width="55" height="55" /></a></li>
-        <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
-        <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
-      </ul>
+    <ul class="social-media">
+      <li><a href="https://github.com/miltonHenschel"><img src="images/github.svg" alt="GitHub" width="55" height="55" /></a></li>
+      <li><a href="https://linkedin.com/in/henschelnketchoguem"><img src="images/linkedin.svg" alt="LinkedIn" width="25" height="55" /></a></li>
+      <li><a href="https://www.angellist.com/"><img src="images/angellist.svg" alt="Angellist" width="55" height="55" /></a></li>
+      <li><a href="https://twitter.com/nketchogue"><img src="images/twitter.svg" alt="Twitter" width="55" height="55" /></a></li>
+      <li><a href="https://medium.com/@nketchoguemilton"><img src="images/medium.svg" alt="Medium" width="55" height="55" /></a></li>
+    </ul>
+
+    <img src="./images/Background.png" alt="Background">
     </section>
 
     <!-- PROJECTS -->
